--- a/index.html
+++ b/index.html
@@ -4,20 +4,20 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Areen Deshpande | Home</title>
-    <link rel="stylesheet" type="text/css" href="../css/style.css">
-    <link rel="stylesheet" type="text/css" href="../css/home.css">
+    <link rel="stylesheet" type="text/css" href="css/style.css">
+    <link rel="stylesheet" type="text/css" href="css/home.css">
 
 </head>
 <body>
     <header>
         <h2 class="logo">Areen <span>Deshpande</span></h2>
         <ul class="navbar">
-            <li><a href="about.html">About</a></li>
-            <li><a href="experience.html">Experience</a></li>
-            <li><a href="projects.html">Projects</a></li>
-            <li><a href="skills.html">Skills</a></li>
-            <li><a href="achievements.html">Achievements</a></li>
-            <li><a href="contact.html">Contact</a></li>
+            <li><a href="pages/about.html">About</a></li>
+            <li><a href="pages/experience.html">Experience</a></li>
+            <li><a href="pages/projects.html">Projects</a></li>
+            <li><a href="pages/skills.html">Skills</a></li>
+            <li><a href="pages/achievements.html">Achievements</a></li>
+            <li><a href="pages/contact.html">Contact</a></li>
         </ul>
     </header>
     <section class="page-container">
