--- a/pages/experience.html
+++ b/pages/experience.html
@@ -10,7 +10,7 @@
     <header>
         <h2 class="logo">Areen <span>Deshpande</span></h2>
         <ul class="navbar">
-            <li><a href="index.html">Home</a></li>
+            <li><a href="../index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="projects.html">Projects</a></li>
             <li><a href="skills.html">Skills</a></li>
